# mocha

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  install.sh  mocha-shell  mocha.desktop  xinitrc
.cache/clangd/index/: app.c.2B764FFB9D35D44E.idx  app.h.8FB055D311DCEA50.idx  client.c.34B64279D008E0BB.idx  client.h.CECA4F3C5C5900E0.idx  config.c.A46FC0DB05EB79AD.idx  config.h.52818B887C5121C5.idx  config.h.BEBBAD2D6E57A043.idx  event.c.2C4D0B12E4F55D62.idx  event.h.04480DDB705BA73F.idx  launcher.c.428EE8F717A975CE.idx  launcher.h.722AE9C4BF152552.idx  main.c.41C6FE1F02118DE8.idx  main.h.CCCD5FD918B658F0.idx  mocha_launcher.c.EBA5AFC713EA6827.idx  mocha_launcher.h.C84744BB2BD898D9.idx  mocha_util.c.01D5EBF44E10E009.idx  stb_image.h.1A7C71152EEAD47D.idx  toast.c.B54553672BE78C28.idx  toast.h.BA571D157E66DCEA.idx
config/: config.mconf  features.mconf  keybinds.mocha  quotes.txt  theme.mconf  theme.mocha
include/: main.h  mocha_launcher.h
include/event/: event.h
include/features/: launcher.h
include/ui/: toast.h
include/util/: app.h  client.h  config.h
src/: main.c  mocha_launcher.c
src/event/: event.c
src/features/: launcher.c
src/ui/: toast.c
src/util/: app.c  client.c  config.c  config.h  mocha_util.c
